--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sqflite_helper
-description: A small library container helpers to manage sqlite in flutter apps.
+description: A small library containing helpers to manage sqflite in flutter apps.
 version: 0.1.0
 author: kaiserkarel<k.l.kubat@gmail.com>
 homepage: https://github.com/KaiserKarel/sqflite_helper
